--- a/StudentInfoSystem/appsettings.json
+++ b/StudentInfoSystem/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=StudentInfoDb;TrustServerCertificate=True;MultipleActiveResultSets=true;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
